# free-cad

src/Mod/: CMakeLists.txt
src/Mod/CNC/: CMakeLists.txt  CNCGui.py  InitGui.py
src/Mod/CNC/backplot/: backplot.py  freecad_read.py
src/Mod/CNC/libs/libarea/: .gitignore  CMakeLists.txt  COPYING  PythonStuff.cpp  README
src/Mod/CNC/machining_ops/: kurve_funcs.py  profile_op1.py
src/Mod/Draft/: DraftTools.py
src/Mod/Web/Gui/: BrowserView.cpp
